SUBDIRS = cover xzone

iconsdir = $(datadir)/escritorio-movistar/icons
icons_DATA = \
	accesos_directos_24x24.png	\
	accesos_directos_48x48.png	\
	addressbook_16x16.png		\
	addressbook_24x24.png		\
	addressbook_32x32.png		\
	addressbook_48x48.png		\
	ad_main_button.png		\
	ayuda_16x16.png			\
	ayuda_48x48.png			\
	bookmarks_16x16.png		\
	bookmarks_24x24.png		\
	bookmarks_32x32.png		\
	buscar_16x16.png		\
	cabecera-agenda.png		\
	cabecera-consumo.png		\
	conectado.gif			\
	conectado.png			\
	conexiones_24x24.png		\
	configuracion_16x16.png		\
	configuracion_48x48.png		\
	connections_16x16.png		\
	connections_24x24.png		\
	connections_32x32.png		\
	consumo_32x32.png		\
	consumo_icon_16x16.png		\
	contactonuevo_16x16.png		\
	contactonuevo_32x32.png		\
	default_16x16.png		\
	devices_24x24.png		\
	devices_32x32.png		\
	editarcontacto_16x16.png	\
	editarcontacto_32x32.png	\
	em.png				\
	eliminarcontacto_16x16.png	\
	eliminarcontacto_32x32.png	\
	favoritos_movistar.png		\
	help_main_button.png		\
	logo_notify.png			\
	mail_16x16.png			\
	mail_32x32.png			\
	main_window_icon.png		\
	mini_banner.png			\
	mis_dispositivos_24x24.png	\
	movistar.gif			\
	no-conectado.gif		\
	no-conectado.png		\
	preferences_main_button.png	\
	recv_consum.png			\
	recv_consum2.png		\
	roaming.png			\
	security_24x24.png		\
	security_32x32.png		\
	seguridad_24x24.png		\
	send_consum.png			\
	send_consum2.png		\
	services_24x24.png		\
	services_32x32.png		\
	servicios_24x24.png		\
	synchronize_16x16.png		\
	synchronize_32x32.png		\
	general_32x32.png		\
	general_24x24.png		\
	red_signal.png			\
	yellow_signal.png		\
	green_signal.png		\
	grey_signal.png	

EXTRA_DIST=$(icons_DATA)
