SUBDIRS = MSDAddressBook

msdlibdir = $(pythondir)/MSD
msdlib_PYTHON = __init__.py		\
		feedparser.py		\
		MobileManagerClient.py  \
		MSDAction.py		\
		MSDActionsManager.py	\
		MSDAddressbookTab.py	\
		MSDBoem.py		\
		MSDBookmarksTab.py	\
		MSDConf.py		\
		MSDConnectionsManager.py	\
		MSDConnectionsTab.py	\
		MSDConsumGraph.py	\
		MSDTrafficHistoryGraph.py	\
		MSDConsumManager.py	\
		MSDConsumWindow.py	\
		MSDDevicesTab.py	\
		MSDExporter.py		\
		MSDImporter.py		\
		MSDMainStatsWidget.py	\
		MSDMainToolbar.py	\
		MSDMainWindow.py	\
		MSDMessages.py		\
		MSDPreferencesDialog.py	\
		MSDProgressWindow.py	\
		MSDSecurityManager.py	\
		MSDSecurityTab.py	\
		MSDServicesTab.py	\
		MSDSystray.py		\
		MSDUpdateChecker.py	\
		MSDUtils.py		\
		MSDPPPvariables.py	\
		MSDWarningDialog.py	\
		MSDRSSFeeder.py		\
		MSDGeneralTab.py
